# Engine

./: .gitignore  .gitmodules  NOTES.md  README.md  azure-pipelines.yml  thirdpartylegalnotices.txt
src/: .clang-format  CMakeLists.txt  CreateAllProjects.bat  CreateAllProjects.sh  CreatePosixProjects.sh  CreateVSCodeProjects.sh  CreateWindowsProjects.bat  _create_allprojects.bat  _create_allprojects.sh  _create_binprojects.bat  _create_binprojects.sh  _create_coreprojects.bat  _create_engine.bat  _create_engine.sh  _create_libraries.bat  _create_libraries.sh  _create_projects.sh  _create_tools.bat  _create_tools.sh  _pyvpc_allprojects.bat  _pyvpc_coreprojects.bat  _pyvpc_engineandtools.bat  _pyvpc_libprojects.bat  auto_issue50.py  create_physics_test.bat  createallprojects.bat  createbinprojects.bat  createbinprojects_allgames.bat  createcoreprojects.bat  createengineandtools.bat  createeverything.bat  createeverything_allgames.bat  createhl2r.bat  createlibprojects.bat  createprojects.bat  createprojects.py  createprojects.sh  rebuild_shaders.bat  unused shaderapi functions
src/_qpc_scripts/: _default.qpc_base  _groups.qpc_base  _projects.qpc_base  base_tool.qpc  posix_base.qpc  source_base.qpc  source_dll_base.qpc  source_exe_base.qpc  source_exe_con_base.qpc  source_lib_base.qpc
src/appframework/: AppSystemGroup.cpp  CMakeLists.txt  VguiMatSysApp.cpp  WinApp.cpp  appframework.qpc  appframework.vpc  linuxapp.cpp
src/avi/: avi.cpp  valve_avi.vpc
src/bitmap/: CMakeLists.txt  ImageByteSwap.cpp  bitmap.qpc  bitmap.vpc  colorconversion.cpp  float_bm.cpp  float_bm4.cpp  float_bm_bilateral_filter.cpp  imageformat.cpp  tgaloader.cpp  tgawriter.cpp
src/build-mingw32/: CMakeCache.txt  Makefile  cmake_install.cmake
src/choreoobjects/: CMakeLists.txt  choreoobjects.qpc  choreoobjects.vpc
src/cmake_scripts/: cmake-util.cmake  exe-base.cmake  library-base.cmake  mingw32-toolchain.cmake  project-base.cmake  source-base.cmake  source-directories.cmake  source-template.cmake  toolchain-linux32.cmake
src/common/: ConfigManager.cpp  mingw_off.h  proto_version.h  steamid.cpp  studiobyteswap.cpp  userid.h
src/datacache/: CMakeLists.txt  datacache.cpp  datacache.h  datacache.qpc  datacache.vpc  mdlcache.cpp
src/datamodel/: datamodel.cpp  datamodel.qpc  datamodel.vpc  dependencygraph.cpp  dmattribute.cpp  dmserializerbinary.cpp  dmserializerkeyvalues.cpp
src/dedicated/: dedicated.qpc  dedicated.vpc
src/dedicated_main/: dedicated_main.qpc  dedicated_main.vpc  main.cpp
src/devtools/: makefile_base_posix.mak  normalize.py  vpc_fucking_sucks.py
src/dmserializers/: dmserializers.qpc  dmserializers.vpc
src/dmxloader/: CMakeLists.txt  dmxattribute.cpp  dmxloader.cpp  dmxloader.qpc  dmxloader.vpc
src/engine/: CMakeLists.txt  EngineFiles.cmake  GameEventManager.cpp  Host.cpp  Host_cmd.cpp  LoadScreenUpdate.cpp  ModelInfo.cpp  baseclient.cpp  baseclientstate.cpp  baseclientstate.h  baseserver.cpp  baseserver.h  bugreporter.cpp  buildcubemaps.cpp  cdll_engine_int.cpp  cl_entityreport.cpp  cl_ents_parse.cpp  cl_main.cpp  cl_rcon.cpp  cl_steamauth.cpp  cl_steamauth.h  cl_texturelistpanel.cpp  client.cpp  clientframe.h  common.cpp  console.cpp  console.h  debugoverlay.h  decal.h  decal_clip.h  demo.h  demofile.h  disp.cpp  disp_mapload.cpp  download.cpp  downloadthread.cpp  dt_send_eng.h  engine.qpc  engine.vpc  enginetrace.cpp  (+47 more)
src/fgdlib/: CMakeLists.txt  fgdlib.qpc  fgdlib.vpc  gamedata.cpp
src/filesystem/: CMakeLists.txt  QueuedLoader.cpp  basefilesystem.cpp  basefilesystem.h  filesystem_async.cpp  filesystem_stdio.cpp  filesystem_stdio.qpc  filesystem_stdio.vpc  filesystem_steam.vpc  filetracker.cpp  linux_support.cpp  linux_support.h  packfile.cpp  packfile.h
src/game/: CMakeLists.txt
src/gameui/: BasePanel.cpp  BasePanel.h  BaseSaveGameDialog.cpp  BaseSaveGameDialog.h  BenchmarkDialog.cpp  BonusMapsDatabase.cpp  BonusMapsDatabase.h  BonusMapsDialog.cpp  CMakeLists.txt  CommentaryDialog.h  CommentaryExplanationDialog.h  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.h  CvarSlider.cpp  GameConsole.cpp  GameConsole.h  GameConsoleDialog.cpp  GameConsoleDialog.h  GameUI.qpc  GameUI.vpc  GameUI_Interface.cpp  GameUI_Interface.h  LabeledCommandComboBox.h  LoadCommentaryDialog.cpp  LoadCommentaryDialog.h  LoadGameDialog.cpp  LoadingDialog.cpp  LogoFile.cpp  ModInfo.cpp  MultiplayerAdvancedDialog.cpp  NewGameDialog.cpp  NewGameDialog.h  OptionsDialog_Xbox.cpp  OptionsSubAudio.cpp  OptionsSubKeyboard.cpp  OptionsSubKeyboard.h  OptionsSubMultiplayer.cpp  (+12 more)
src/hammer/: CMakeLists.txt  VGuiWnd.h  bsplighting.cpp  gamepalette.h  hammer_dll.vpc  hammer_mathlib.cpp  hammer_mathlib.h  lpreview_thread.cpp  mapclass.h  mapfrustum.cpp  render3dms.cpp  undo.h
src/hammer_launcher/: CMakeLists.txt  hammer_launcher.vpc  main.cpp
src/inputsystem/: CMakeLists.txt  SDLInputMapping.cpp  SDLInputMapping.h  inputsystem.cpp  inputsystem.h  inputsystem.qpc  inputsystem.vpc  inputsystem2.cpp  joystick.cpp  key_translation.cpp  key_translation.h
src/launcher/: CMakeLists.txt  launcher.cpp  launcher.h  launcher.qpc  launcher.vpc  launcher_posix.cpp  launcher_win.cpp
src/launcher_main/: CMakeLists.txt  launcher_main - Copy.qpc  launcher_main.qpc  launcher_main.vpc  main.cpp
src/lib/: parsifal.lib
src/libparsifal/: BUGS  ChangeLog  Makefile.in  TODO  aclocal.m4  configure  configure.ac
src/linux_sdk/: Makefile
src/materialsystem/: CMakeLists.txt  CTexture.cpp  ccolorcorrection.cpp  cmaterial.cpp  cmaterialsystem.cpp  cmaterialsystem.h  cmatlightmaps.cpp  cmatlightmaps.h  cmatqueuedrendercontext.cpp  cmatqueuedrendercontext.h  cmatrendercontext.h  mat_stub.cpp  materialsystem.qpc  materialsystem.vpc  shader_dll_verify.cpp  shader_dll_verify.h  shadersystem.cpp  shadersystem.h  wireframe.cpp
src/mathlib/: CMakeLists.txt  mathlib.qpc  mathlib.vpc  mathlib_base.cpp  sse.cpp  sse.h  vmatrix.cpp
src/mdllib/: mdllib.qpc  mdllib.vpc  mdllib_stripmodel.cpp
(+3549 files in other folders)
